[package]
name = "status_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
tokio = { version = "1.20.1", features = ["full"] }
serenity = "0.11"